--- a/HotelManager/Views/User/Index.cshtml
+++ b/HotelManager/Views/User/Index.cshtml
@@ -8,6 +8,17 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<p>
+    @using (Html.BeginForm("Index", "User", FormMethod.Get))
+    {
+        <b>Search by:</b> @Html.RadioButton("searchBy", "Name", true) <text> Name </text>
+        @Html.RadioButton("searchBy", "Phone") <text> Number </text>
+        <br />
+        @Html.TextBox("search") <input type="submit" value="Search" />
+    }
+</p>
+
 <table class="table">
     <thead>
         <tr>
